<resources>
    <string name="app_name">Dicoding</string>
    <string name="lebar">Lebar</string>
    <string name="panjang">Panjang</string>
    <string name="tinggi">Tinggi</string>
    <string name="hasil">Hasil</string>
    <string name="hitung">Hitung</string>
    <string name="pindah_activity_dengan_data">Pindah Activity Dengan Data</string>
    <string name="pindah_activity">Pindah Activity</string>
    <string name="pindah_activity_dengan_object">Pindah Activity Dengan Object</string>
    <string name="pindah_activity_dengan_result">Pindah Activity Dengan Result</string>
    <string name="dial_a_number">Dial a Number</string>
    <string name="hello_activity_2">Hello Activity 2</string>
    <string name="input_text">Input Text</string>
</resources>
